--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-spotify-player": "^1.0.4",
+    "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.1.1"
   }
 }
